Aligned editor menu

--- a/src/App.scss
+++ b/src/App.scss
@@ -22,3 +22,10 @@
     box-sizing: inherit;
   }
 }
+
+.Root {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  // min-width: 100vw;
+}
