--- a/src/views/Main/Main.scss
+++ b/src/views/Main/Main.scss
@@ -1,3 +1,15 @@
+.Root {
+  display: flex;
+  flex: 1 1 auto;
+  flex-direction: column;
+}
+
+.Container {
+  display: flex;
+  flex: 1 1 auto;
+  flex-direction: column;
+}
+
 .Header {
   height: 86px;
   position: relative;
