--- a/src/views/Main/Main.scss
+++ b/src/views/Main/Main.scss
@@ -11,7 +11,7 @@
 }
 
 .Header {
-  height: 86px;
+  height: 100px;
   position: relative;
   width: 100%;
 
@@ -27,9 +27,10 @@
 
   &Shadow {
     background: #7e7acc;
-    border-radius: 100% / 32px;
-    filter: blur(25px);
-    height: 100%;
+    border-bottom-left-radius: 100%;
+    border-bottom-right-radius: 100%;
+    filter: blur(40px);
+    height: 130px;
     left: 0;
     opacity: .2;
     position: absolute;
