--- a/src/views/Website/Website.scss
+++ b/src/views/Website/Website.scss
@@ -6,7 +6,7 @@
 .Container {
   display: flex;
   flex: 1 1 auto;
-  width: 100%;
+  width: calc(100% - 296px);
 }
 
 .Copyright {
@@ -22,7 +22,7 @@
 .Menu {
   align-items: center;
   display: flex;
-  flex: 0 0 296px;
+  flex: 0 0 272px;
   flex-direction: column;
   margin: 0 24px 0 0;
 }
