Add screenshots view.

--- a/src/views/Main/components/Header/Header.scss
+++ b/src/views/Main/components/Header/Header.scss
@@ -51,3 +51,14 @@
   width: 100%;
   z-index: 1;
 }
+
+.Steps {
+  height: 100%;
+}
+
+.Title {
+  color: #a4a8b0;
+  font-size: 22px;
+  font-weight: 400;
+  letter-spacing: -.3px;
+}
