--- a/src/components/Form/components/Select.scss
+++ b/src/components/Form/components/Select.scss
@@ -12,6 +12,18 @@
         transform: translateY(52px);
         visibility: visible;
       }
+
+      .Trigger {
+        &Button {
+          box-shadow:
+            0 4px 12px rgba(158, 154, 226, .4);
+          opacity: 1;
+
+          &:before {
+            transform: rotate(180deg);
+          }
+        }
+      }
     }
   }
 }
@@ -22,13 +34,14 @@
   box-shadow: 0 10px 30px 0 rgba(0, 0, 0, 0.1);
   opacity: 0;
   overflow: hidden;
-  padding: 20px 0;
+  padding: 20px 0 12px 0;
   position: absolute;
   top: 0;
   transform: translateY(44px);
   transition: all .2s;
   visibility: hidden;
   width: 100%;
+  z-index: 2;
 }
 
 .Item {
@@ -75,10 +88,44 @@
   color: #aeb2ba;
   font-size: 14px;
   height: 40px;
+  justify-content: space-between;
   letter-spacing: .6px;
-  padding: 0 16px;
+  padding: 0 4px 0 16px;
+  position: relative;
 
   &:hover {
     cursor: pointer;
+
+    .TriggerButton {
+      opacity: 1;
+    }
+  }
+
+  &Button {
+    align-items: center;
+    background: #b8b4f9;
+    border: 0;
+    border-radius: 4px;
+    display: flex;
+    height: 28px;
+    justify-content: center;
+    margin: 0 0 0 16px;
+    opacity: .8;
+    padding: 0;
+    transition: all .2s;
+    width: 28px;
+
+    &:before {
+      border-color: #fff transparent transparent;
+      border-style: solid;
+      border-width: 8px 5px 0 5px;
+      content: '';
+      transform: rotate(0deg);
+      transition: all .2s;
+    }
+
+    &:focus {
+      outline: none;
+    }
   }
 }
