--- a/src/views/Templates/components/Card.scss
+++ b/src/views/Templates/components/Card.scss
@@ -6,7 +6,7 @@
   overflow: hidden;
   position: relative;
   transition: all .2s;
-  width: 100%;
+  width: 256px;
 
   &:hover {
     box-shadow: 0 20px 60px -30px rgba(0, 0, 0, .4);
