--- a/src/views/Editor/components/View/View.scss
+++ b/src/views/Editor/components/View/View.scss
@@ -33,5 +33,6 @@
   background: #d8d8d8;
   border-radius: 10px;
   box-shadow: 0 20px 60px 0 rgba(0, 0, 0, .15);
+  overflow: scroll;
   transition: all .2s;
 }
