Add mobile template.

--- a/src/views/Main/Main.scss
+++ b/src/views/Main/Main.scss
@@ -10,3 +10,9 @@
   flex-direction: column;
   margin: 100px 0 0;
 }
+
+.Wrapper {
+  display: flex;
+  flex: 1 1 auto;
+  flex-direction: column;
+}
