--- a/src/components/Form/components/Color/Color.scss
+++ b/src/components/Form/components/Color/Color.scss
@@ -42,7 +42,12 @@
 }
 
 .Hex {
+  color: #c5c9ce;
+  font-size: 12px;
+  font-weight: 500;
+  letter-spacing: .6px;
   margin: 16px 0 0;
+  text-transform: uppercase;
 }
 
 .Hue {
