--- a/src/templates/Template1/views/Mobile.scss
+++ b/src/templates/Template1/views/Mobile.scss
@@ -30,6 +30,15 @@
   width: 100%;
 }
 
+.Slider {
+  margin: 40px 0;
+}
+
+.Smartphone {
+  height: 247px;
+  width: 121px;
+}
+
 .Title {
   font-size: 22px;
   letter-spacing: 1.6px;
