--- a/src/components/Form/components/Link.scss
+++ b/src/components/Form/components/Link.scss
@@ -112,7 +112,7 @@
 .Info {
   flex: 1 1 auto;
   margin: 0 0 0 16px;
-  max-width: calc(100% - 56px);
+  max-width: calc(100% - 92px);
 }
 
 .Label {
@@ -141,8 +141,10 @@
   border: 0;
   border-radius: 100%;
   display: flex;
+  flex: 0 0 24px;
   height: 24px;
   justify-content: center;
+  margin: 0 0 0 12px;
   padding: 0;
   transition: all .2s;
   width: 24px;
