--- a/src/components/Template/components/Store/Store.scss
+++ b/src/components/Template/components/Store/Store.scss
@@ -1,3 +1,19 @@
+.Root {
+  &View {
+    &Desktop {
+      .Container {
+        height: 64px;
+      }
+    }
+
+    &Mobile {
+      .Container {
+        height: 44px;
+      }
+    }
+  }
+}
+
 .Container {
   display: flex;
   margin: 0 -10px;
