--- a/src/views/Screenshots/components/Item.scss
+++ b/src/views/Screenshots/components/Item.scss
@@ -4,7 +4,6 @@
   height: 100%;
   opacity: .6;
   overflow: hidden;
-  transition: all .2s;
   position: relative;
   width: 100%;
 
@@ -14,6 +13,7 @@
     cursor: pointer;
     opacity: 1;
     transform: scale(1.1);
+    transition: transform .2s;
 
     .Delete {
       transform: translateY(0);
