--- a/src/components/Template/components/Smartphone.scss
+++ b/src/components/Template/components/Smartphone.scss
@@ -2,8 +2,15 @@
   position: relative;
 }
 
+.Container {
+  position: absolute;
+}
+
 .Link {
   height: 100%;
+  position: absolute;
+  top: 0;
+  width: 100%;
 }
 
 .Mockup {
