--- a/src/views/Editor/components/Container.scss
+++ b/src/views/Editor/components/Container.scss
@@ -1,7 +1,7 @@
 .Root {
-  flex: 1 1 100%;
   margin: -12px;
   max-height: calc(100% - 28px);
+  min-height: 700px;
   overflow-x: visible;
   overflow-y: scroll;
   padding: 12px 12px 60px;
