--- a/src/templates/Template1/views/Desktop.scss
+++ b/src/templates/Template1/views/Desktop.scss
@@ -1,77 +1,97 @@
 .Root {
+  align-items: center;
   background-image: linear-gradient(to bottom, #479fff 1%, #7b54fb);
   display: flex;
-  justify-content: center;
-  min-height: 768px;
-  min-width: 1280px;
+  flex-direction: column;
+  min-height: 100%;
+  max-width: 100%;
+  overflow: hidden;
+  padding: 60px 0;
+  width: 100%;
 }
 
 .Container {
   display: flex;
-  flex: 1 1 calc(100% - 240px);
+  margin: 80px 0 0;
+}
+
+.Content {
+  display: flex;
+  flex: 0 0 472px;
+  flex-direction: column;
+  justify-content: center;
+  max-width: 472px;
 }
 
 .Copyright {
-  &Text {
-    color: #ffffff;
-    font-size: 10px;
-    letter-spacing: 1px;
-    opacity: .4;
-  }
+  font-size: 14px;
+  letter-spacing: 1px;
+  line-height: 18px;
 }
 
 .Description {
-  color: #ffffff;
-  font-size: 11px;
-  line-height: 22px;
-  margin: 24px 0 0;
-  opacity: .8;
+  font-size: 12px;
+  line-height: 26px;
+  margin: 32px 0 0;
 }
 
 .Footer {
   align-items: center;
   display: flex;
-  flex: 0 0 98px;
+  height: 20px;
   justify-content: space-between;
+  margin: 40px 0 0;
 }
 
 .Header {
   align-items: center;
   display: flex;
-  flex: 0 0 168px;
-  height: 168px;
+  height: 32px;
   justify-content: space-between;
+  width: 100%;
 }
 
-.Left {
-  display: flex;
-  flex: 0 0 600px;
-  flex-direction: column;
-  justify-content: center;
-  padding: 0 0 0 100px;
+.Policy {
+  font-size: 14px;
 }
 
-.Right {
-  align-items: center;
-  display: flex;
-  flex: 1 1 calc(100% - 266px);
-  justify-content: center;
+.Screenshots {
+  height: 400px;
+  left: 16px;
+  position: absolute;
+  top: 64px;
+  width: 228px;
+
+  &Item {
+    height: 400px;
+    width: 228px;
+  }
+}
+
+.Slider {
+  flex: 1 1 auto;
+  margin: 0 0 0 120px;
+  max-width: calc(100% - 592px);
+}
+
+.Smartphone {
+  height: 530px;
+  position: relative;
+  width: 260px;
 }
 
 .Store {
-  margin: 56px 0 0;
+  margin: 64px 0 0;
 }
 
 .Title {
-  color: #ffffff;
-  font-size: 36px;
-  font-weight: 400;
-  letter-spacing: 3px;
-  line-height: 44px;
+  font-size: 42px;
+  letter-spacing: 2.5px;
+  line-height: 52px;
 }
 
 .Wrapper {
-  display: flex;
-  flex-direction: column;
-  min-width: 1024px;
+  flex: 1 1 auto;
+  padding: 0 100px;
+  width: 1280px;
 }
