--- a/src/templates/Template1/views/Desktop.scss
+++ b/src/templates/Template1/views/Desktop.scss
@@ -4,8 +4,8 @@
   display: flex;
   flex-direction: column;
   min-height: 100%;
-  max-width: 100%;
-  overflow: hidden;
+  min-width: 1280px;
+  overflow-x: hidden;
   padding: 60px 0;
   width: 100%;
 }
