Update views. Create tablet verison.

--- a/src/components/Template/components/Social/Social.scss
+++ b/src/components/Template/components/Social/Social.scss
@@ -21,6 +21,17 @@
         }
       }
     }
+
+    &Tablet {
+      .Container {
+        height: 20px;
+        min-width: 20px;
+
+        & > *:not(:first-child) {
+          margin: 0 0 0 24px;
+        }
+      }
+    }
   }
 }
 
