--- a/src/views/Editor/components/Devices/components/Item.scss
+++ b/src/views/Editor/components/Devices/components/Item.scss
@@ -60,6 +60,8 @@
 
   &Is {
     &Active {
+      pointer-events: none;
+
       .Cover {
         filter: drop-shadow(8px 10px 8px rgba(126, 122, 204, .4));
       }
