--- a/src/components/Template/components/Store/Store.scss
+++ b/src/components/Template/components/Store/Store.scss
@@ -13,6 +13,17 @@
         height: 44px;
       }
     }
+
+    &Tablet {
+      .Container {
+        height: 56px;
+        margin: 0 -16px;
+
+        & > * {
+          margin: 0 16px;
+        }
+      }
+    }
   }
 }
 
