--- a/src/components/Template/components/Store/components/Item.scss
+++ b/src/components/Template/components/Store/components/Item.scss
@@ -37,6 +37,26 @@
     &Mobile {
       min-width: 128px;
     }
+
+    &Tablet {
+      height: 56px;
+      padding: 0 20px 0 24px;
+      width: 164px;
+
+      .Icon {
+        font-size: 24px;
+      }
+
+      .Info {
+        margin: 0 0 0 16px;
+      }
+
+      .Title {
+        font-size: 14px;
+        font-weight: 600;
+        letter-spacing: .4px;
+      }
+    }
   }
 }
 
