--- a/src/templates/Template1/views/Mobile.scss
+++ b/src/templates/Template1/views/Mobile.scss
@@ -2,7 +2,7 @@
   background-image: linear-gradient(to bottom, #479fff 1%, #7b54fb);
   min-height: 100%;
   max-width: 100%;
-  overflow: hidden;
+  overflow-x: hidden;
   padding: 24px;
   width: 100%;
 }
