Add animate to editor.

--- a/src/components/Form/components/Field.scss
+++ b/src/components/Form/components/Field.scss
@@ -4,14 +4,12 @@
   }
 }
 
-.Control {
-}
-
 .Label {
   color: #c5c9ce;
+  display: block;
   font-size: 12px;
   font-weight: 600;
   letter-spacing: .6px;
-  margin: 0 12px;
+  margin: 0 0 12px;
   text-transform: uppercase;
 }
