--- a/src/components/Form/components/Select/Select.scss
+++ b/src/components/Form/components/Select/Select.scss
@@ -9,6 +9,19 @@
     }
 
     &Focused {
+      &.RootVariantContained {
+        .Control {
+          background: #ffffff;
+          box-shadow: 0 5px 16px 0 rgba(0, 0, 0, .06);
+        }
+
+        .Trigger {
+          &:before {
+            transform: rotate(180deg);
+          }
+        }
+      }
+
       &.RootVariantFlat {
         .Control {
           border-color: #d7d0f2;
@@ -24,31 +37,38 @@
   &Variant {
     &Contained {
       .Control {
+        align-items: center;
         background: #f0f1f1;
         border: 0;
         border-radius: 4px;
+        display: flex;
         color: #aeb2ba;
         height: 40px;
         padding: 0 16px;
+      }
 
-        &:focus {
-          background: #ffffff;
-          box-shadow: 0 5px 16px 0 rgba(0, 0, 0, .06);
-        }
+      .Dropdown {
+        top: 48px;
+      }
+
+      .Input {
+        color: #aeb2ba;
+        font-size: 14px;
+        letter-spacing: .6px;
       }
     }
 
     &Flat {
-      .Dropdown {
-        top: 56px;
-      }
-
       .Control {
         background: #f5f5f5;
         border: 1px solid transparent;
         border-radius: 6px;
         height: 50px;
         padding: 0 20px;
+      }
+
+      .Dropdown {
+        top: 56px;
       }
 
       .Input {
@@ -149,9 +169,10 @@
   background: #b8b4f9;
   border-radius: 4px;
   display: flex;
+  flex: 0 0 28px;
   height: 28px;
   justify-content: center;
-  margin: 0 0 0 16px;
+  margin: 0 -8px 0 16px;
   opacity: .8;
   padding: 0;
   transition: all .2s;
