--- a/src/views/Editor/Editor.scss
+++ b/src/views/Editor/Editor.scss
@@ -22,7 +22,47 @@
   flex: 0 0 272px;
   margin: 0 24px 24px;
   max-width: 272px;
+  position: relative;
   width: 100%;
+
+  &Animate {
+    &Enter {
+      left: 0;
+      opacity: 0;
+      position: absolute;
+      top: 0;
+      transform: translateX(80px);
+      transition: all .4s;
+      transition-delay: .2s;
+      visibility: hidden;
+      width: 100%;
+
+      &Active {
+        opacity: 1;
+        transform: translateX(0);
+        visibility: visible;
+      }
+    }
+
+    &Exit {
+      left: 0;
+      opacity: 1;
+      position: absolute;
+      top: 0;
+      transition: all .4s;
+      visibility: visible;
+      width: 100%;
+
+      &Active {
+        opacity: 0;
+        visibility: hidden;
+      }
+    }
+  }
+
+  & > * {
+    width: 100%;
+  }
 }
 
 .View {
