--- a/src/views/Websites/Websites.scss
+++ b/src/views/Websites/Websites.scss
@@ -2,6 +2,24 @@
   display: flex;
   flex: 1 1 auto;
   justify-content: center;
+
+  &Animate {
+    &Enter {
+      .Header {
+        opacity: 0;
+        transform: translateY(40px);
+      }
+
+      &Active {
+        opacity: 1;
+
+        .Header {
+          opacity: 1;
+          transform: translate(0);
+        }
+      }
+    }
+  }
 }
 
 .Create {
@@ -20,41 +38,42 @@
   width: 100px;
 
   &:active {
-    background: rgba(142, 138, 216, .7);
+    background: rgba(142, 138, 216, .6);
 
     &:before {
       background: rgba(142, 138, 216, .6);
-      bottom: 0;
-      filter: 6px;
+      filter: 8px;
+      transform: translateY(10px);
     }
   }
 
   &:after {
     content: 'Create';
+    opacity: .8;
     position: relative;
     z-index: 2;
   }
 
   &:before {
-    background: rgba(158, 154, 226, 1);
+    background: rgba(158, 154, 226, .8);
     border-radius: 20px;
     content: '';
     display: block;
-    filter: blur(4px);
-    height: 14px;
+    filter: blur(6px);
+    height: 20px;
     position: absolute;
     transition: all .2s;
-    width: 66px;
+    width: 80px;
     z-index: 1;
   }
 
   &:hover:not(:active) {
-    background: rgba(142, 138, 216, .9);
+    background: rgba(142, 138, 216, .8);
 
     &:before {
       background: rgba(142, 138, 216, 1);
-      bottom: 0;
-      filter: 6px;
+      filter: 8px;
+      transform: translateY(10px);
     }
   }
 }
@@ -62,6 +81,24 @@
 .Header {
   align-items: center;
   display: flex;
+  transition: all .3s;
+  transition-delay: .3s;
+}
+
+.Item {
+  transition: all .4s;
+
+  &Animate {
+    &Enter {
+      opacity: 0;
+      transform: translateY(40px);
+
+      &Active {
+        opacity: 1;
+        transform: translate(0);
+      }
+    }
+  }
 }
 
 .Limit {
