--- a/src/views/Websites/containers/Limit.scss
+++ b/src/views/Websites/containers/Limit.scss
@@ -18,6 +18,8 @@
     background-image: linear-gradient(269deg, #5e7adb, #8359c1);
     border-radius: 6px;
     height: 100%;
+    transition: all .4s;
+    width: 0;
   }
 }
 
