--- a/src/views/Editor/containers/View/View.scss
+++ b/src/views/Editor/containers/View/View.scss
@@ -35,7 +35,6 @@
   border-radius: 10px;
   box-shadow: 0 20px 60px 0 rgba(0, 0, 0, .15);
   display: flex;
-  // flex: 1 1 auto;
   justify-content: center;
   overflow: hidden;
   position: relative;
@@ -43,6 +42,7 @@
   width: 100%;
 
   & > * {
+    display: flex;
     transition: opacity .2s;
   }
 }
