--- a/src/views/Main/containers/Header.scss
+++ b/src/views/Main/containers/Header.scss
@@ -45,17 +45,17 @@
 }
 
 .Shadow {
-  background: #7e7acc;
-  border-bottom-left-radius: 100%;
-  border-bottom-right-radius: 100%;
-  filter: blur(40px);
-  height: 130px;
-  left: 0;
-  opacity: .2;
-  position: absolute;
-  top: 0;
-  width: 100%;
-  z-index: 1;
+  // background: #7e7acc;
+  // border-bottom-left-radius: 100%;
+  // border-bottom-right-radius: 100%;
+  // filter: blur(40px);
+  // height: 130px;
+  // left: 0;
+  // opacity: .2;
+  // position: absolute;
+  // top: 0;
+  // width: 100%;
+  // z-index: 1;
 }
 
 .Steps {
