--- a/src/views/Editor/containers/View/View.scss
+++ b/src/views/Editor/containers/View/View.scss
@@ -46,3 +46,11 @@
     transition: opacity .2s;
   }
 }
+
+.Track {
+  display: flex;
+  justify-content: center;
+  overflow: scroll;
+  position: relative;
+  z-index: 0;
+}
