--- a/src/template/templates/Template1/views/Mobile.scss
+++ b/src/template/templates/Template1/views/Mobile.scss
@@ -61,6 +61,10 @@
   height: 247px;
   position: relative;
   width: 121px;
+
+  &Mockup {
+    filter: drop-shadow(0 32px 24px rgba(0, 0, 0, .5));
+  }
 }
 
 .Store {
