--- a/src/template/templates/Template1/views/Desktop.scss
+++ b/src/template/templates/Template1/views/Desktop.scss
@@ -83,11 +83,13 @@
 }
 
 .Smartphone {
-  border-radius: 40px;
-  box-shadow: 0 32px 60px rgba(0, 0, 0, 0.6);
   height: 530px;
   position: relative;
   width: 260px;
+
+  &Mockup {
+    filter: drop-shadow(0 32px 24px rgba(0, 0, 0, .6));
+  }
 }
 
 .Store {
