--- a/src/views/Editor/containers/View/View.scss
+++ b/src/views/Editor/containers/View/View.scss
@@ -4,6 +4,7 @@
   flex: 1 1 auto;
   flex-direction: column;
   justify-content: center;
+  max-height: 100%;
   width: 100%;
 
   &Device {
@@ -25,6 +26,15 @@
       .Container {
         max-height: 1024px;
         max-width: 768px;
+      }
+    }
+  }
+
+  &Is {
+    &Busied {
+      .Track {
+        opacity: 0;
+        transition: all .2s;
       }
     }
   }
@@ -50,7 +60,9 @@
 .Track {
   display: flex;
   justify-content: center;
+  opacity: 1;
   overflow: scroll;
   position: relative;
+  transition: all .4s;
   z-index: 0;
 }
