--- a/src/views/Main/Main.scss
+++ b/src/views/Main/Main.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex: 1 1 auto;
   flex-direction: column;
+  max-height: 100%;
 }
 
 .Container {
@@ -9,12 +10,14 @@
   flex: 1 1 auto;
   flex-direction: column;
   margin: 100px 0 0;
+  max-height: calc(100% - 200px);
   position: relative;
 
   & > * {
     display: flex;
     flex: 1 1 auto;
     flex-direction: column;
+    max-height: 100%;
     position: relative;
   }
 
@@ -32,6 +35,7 @@
     }
 
     &Exit {
+      height: 100%;
       left: 0;
       opacity: 1;
       position: absolute;
@@ -52,6 +56,7 @@
   display: flex;
   flex: 1 1 auto;
   flex-direction: column;
+  max-height: 100%;
 }
 
 :global .example {
