--- a/src/views/Main/containers/Header.scss
+++ b/src/views/Main/containers/Header.scss
@@ -1,4 +1,5 @@
 .Root {
+  flex: 0 0 100px;
   height: 100px;
   position: relative;
   width: 100%;
@@ -45,17 +46,17 @@
 }
 
 .Shadow {
-  // background: #7e7acc;
-  // border-bottom-left-radius: 100%;
-  // border-bottom-right-radius: 100%;
-  // filter: blur(40px);
-  // height: 130px;
-  // left: 0;
-  // opacity: .2;
-  // position: absolute;
-  // top: 0;
-  // width: 100%;
-  // z-index: 1;
+  background: #7e7acc;
+  border-bottom-left-radius: 100%;
+  border-bottom-right-radius: 100%;
+  filter: blur(40px);
+  height: 130px;
+  left: 0;
+  opacity: .2;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  z-index: 1;
 }
 
 .Steps {
