--- a/src/views/Website/Website.scss
+++ b/src/views/Website/Website.scss
@@ -1,22 +1,34 @@
 .Root {
   display: flex;
   flex: 1 1 auto;
+  max-height: 100%;
 
   &Animate {
     &Enter {
       &Active {
+        .Container {
+          opacity: 1 !important;
+          transition: all .6s;
+          transition-delay: .3s;
+        }
+
         .Copyright {
           opacity: 1 !important;
           transform: translateY(0) !important;
           transition: all .4s;
-          transition-delay: .3s;
+          transition-delay: .6s;
         }
 
         .Menu {
           opacity: 1 !important;
           transform: translateX(0) !important;
           transition: all .4s;
+          transition-delay: .3s;
         }
+      }
+
+      .Container {
+        opacity: 0;
       }
 
       .Copyright {
