--- a/src/template/templates/Template1/views/Desktop.scss
+++ b/src/template/templates/Template1/views/Desktop.scss
@@ -27,12 +27,14 @@
   font-size: 14px;
   letter-spacing: 1px;
   line-height: 18px;
+  word-break: break-word;
 }
 
 .Description {
   font-size: 12px;
   line-height: 26px;
   margin: 32px 0 0;
+  word-break: break-word;
 }
 
 .Footer {
@@ -100,6 +102,7 @@
   font-size: 42px;
   letter-spacing: 2.5px;
   line-height: 52px;
+  word-break: break-word;
 }
 
 .Wrapper {
