--- a/src/template/templates/Template1/views/Mobile.scss
+++ b/src/template/templates/Template1/views/Mobile.scss
@@ -15,6 +15,7 @@
   letter-spacing: .4px;
   line-height: 20px;
   margin: 16px 0 0;
+  word-break: break-word;
 }
 
 .Footer {
@@ -75,4 +76,5 @@
   font-size: 22px;
   letter-spacing: 1.6px;
   line-height: 28px;
+  word-break: break-word;
 }
