--- a/src/views/Editor/containers/View/View.scss
+++ b/src/views/Editor/containers/View/View.scss
@@ -10,7 +10,7 @@
   &Device {
     &Desktop {
       .Container {
-        max-height: 720px;
+        max-height: 768px;
         max-width: 1280px;
       }
     }
@@ -45,7 +45,9 @@
   border-radius: 10px;
   box-shadow: 0 20px 60px 0 rgba(0, 0, 0, .15);
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  max-height: 100%;
   overflow: hidden;
   position: relative;
   transition: all .4s ease-in-out;
@@ -58,13 +60,17 @@
 }
 
 .Track {
+  align-items: flex-start;
   display: flex;
+  height: 100%;
   justify-content: center;
+  left: 0;
   opacity: 1;
   overflow-x: hidden;
   overflow-y: overlay;
-  position: relative;
+  top: 0;
   transition: all .4s;
+  width: 100%;
   z-index: 0;
 
   &::-webkit-scrollbar {
