--- a/src/views/Websites/components/Item.scss
+++ b/src/views/Websites/components/Item.scss
@@ -1,7 +1,9 @@
 .Root {
   background: #fff;
   border-radius: 8px;
+  overflow: hidden;
   padding: 20px 28px;
+  position: relative;
   transition: all .4s;
 
   &:hover {
@@ -14,6 +16,11 @@
   }
 
   &Is {
+    &Fetching {
+      box-shadow: 0px 5px 40px 0 rgba(0, 0, 0, .1);
+    }
+
+    &Fetching,
     &NotSupported {
       .Icon {
         filter: grayscale(100);
