--- a/src/views/Main/components/Steps.scss
+++ b/src/views/Main/components/Steps.scss
@@ -1,39 +1,128 @@
 .Root {
   display: flex;
   height: 100%;
+
+  &Animate {
+    &Enter {
+      opacity: 0;
+
+      &Active {
+        opacity: 1 !important;
+        transition: all .4s;
+      }
+    }
+
+    &Exit {
+      opacity: 1;
+
+      &Active {
+        opacity: 0 !important;
+        transition: all .4s;
+      }
+    }
+  }
+
+  & > * {
+    margin: 0 32px;
+  }
 }
 
-.Content {
-  align-items: flex-end;
-  display: flex;
-  transition: all .2s;
+.Index {
+  border-radius: 100%;
+  height: 32px;
+  overflow: hidden;
+  position: relative;
+  width: 32px;
+
+  &:before {
+    background-image: linear-gradient(225deg, #5e7adb, #8359c1);
+    content: '';
+    display: block;
+    height: 100%;
+    opacity: .2;
+    position: absolute;
+    width: 100%;
+    z-index: 1;
+  }
+
+  &Content {
+    align-items: center;
+    background: #fff;
+    border-radius: 100%;
+    color: #a6a2e9;
+    display: flex;
+    font-weight: 700;
+    height: 100%;
+    justify-content: center;
+    position: relative;
+    transform: scale(.8);
+    transition: all .4s;
+    width: 100%;
+    z-index: 2;
+
+    &:before {
+      background: #fff;
+      content: '';
+      height: 9px;
+      mask: url('components/Icon/assets/check.svg') no-repeat center center;
+      mask-size: contain;
+      opacity: 0;
+      position: absolute;
+      transition: all .2s;
+      transition-delay: .3s;
+      visibility: hidden;
+      width: 12px;
+    }
+  }
 }
 
-.Number {
-  font-size: 22px;
-  font-weight: 600;
-}
-
-.Link {
+.Step {
   align-items: center;
-  color: #c8c8ce;
   display: flex;
-  height: 100%;
-  justify-content: center;
-  pointer-events: none;
-  text-decoration: none;
-  width: 172px;
+
+  &Animate {
+    &Enter {
+      opacity: 0;
+      transform: translateY(-60px);
+
+      &Active {
+        opacity: 1 !important;
+        transform: translateY(0);
+        transition: all .4s;
+      }
+    }
+  }
 
   &Is {
-    &Active {
-      color: #a6a2e9;
+    &Finished {
+      .IndexContent {
+        background-image: linear-gradient(225deg, #5e7adb, #8359c1);
+        color: transparent;
+        transform: scale(1);
+
+        &:before {
+          opacity: 1;
+          visibility: visible;
+        }
+      }
+    }
+
+    &Selected {
+      .IndexContent {
+        background: #a6a2e9;
+        transform: scale(0.35);
+      }
+
+      .Title {
+        color: #a6a2e9;
+      }
     }
   }
 }
 
 .Title {
+  color: #c8c8ce;
   font-size: 14px;
-  font-weight: 600;
-  line-height: 22px;
-  margin: 0 0 0 8px;
+  margin: 0 0 0 16px;
+  transition: all .4s;
 }
