--- a/src/views/Search/Search.scss
+++ b/src/views/Search/Search.scss
@@ -5,22 +5,34 @@
 
   &Animate {
     &Enter {
+      &:not(&EnterActive) {
+        .Description,
+        .Form,
+        .Title {
+          opacity: 0;
+          transform: translateY(40px);
+        }
+      }
+
       &Active {
         opacity: 1;
+
+        .Description {
+          transition-delay: .1s;
+        }
+
+        .Form {
+          transition-delay: .2s;
+        }
 
         .Description,
         .Form,
         .Title {
-          opacity: 1;
-          transform: translate(0);
+          opacity: 1 !important;
+          transform: translate(0) !important;
+          transition-property: all;
+          transition-duration: .4s;
         }
-      }
-
-      .Description,
-      .Form,
-      .Title {
-        opacity: 0;
-        transform: translateY(40px);
       }
     }
   }
@@ -37,8 +49,6 @@
 
 .Form {
   margin: 32px 0 0;
-  transition: all .4s ease-out;
-  transition-delay: .2s;
 }
 
 .Description {
@@ -49,8 +59,6 @@
   line-height: 28px;
   margin: 20px 0 0;
   text-align: center;
-  transition: all .4s ease-out;
-  transition-delay: .1s;
 }
 
 .List {
@@ -137,7 +145,6 @@
   font-size: 30px;
   letter-spacing: -.6px;
   text-align: center;
-  transition: all .4s ease-out;
 }
 
 .Wrapper {
