--- a/src/views/Editor/containers/View/View.scss
+++ b/src/views/Editor/containers/View/View.scss
@@ -9,11 +9,14 @@
 }
 
 .Container {
+  align-items: center;
   background: #d8d8d8;
   border-radius: 10px;
   box-shadow: 0 20px 60px 0 rgba(0, 0, 0, .15);
+  display: flex;
+  justify-content: center;
   overflow-x: hidden;
-  overflow-y: overlay;
+  overflow-y: hidden;
   transition: all .6s;
   position: relative;
   z-index: 1;
