--- a/src/views/Websites/components/Item.scss
+++ b/src/views/Websites/components/Item.scss
@@ -20,6 +20,18 @@
       box-shadow: 0px 5px 40px 0 rgba(0, 0, 0, .1);
     }
 
+    &New {
+      .Links {
+        & > * {
+          flex: 0 0 100%;
+
+          &:first-child:after {
+            display: none;
+          }
+        }
+      }
+    }
+
     &Fetching,
     &NotSupported {
       .Icon {
